# seznam-ads-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: installation.md  tools.md
docs/superpowers/plans/: 2026-04-30-sklik-mcp.md
docs/superpowers/specs/: 2026-04-30-sklik-mcp-design.md
src/sklik_mcp/: server.py
src/sklik_mcp/core/: client.py  config.py  errors.py  formatting.py  session.py
src/sklik_mcp/tools/: __init__.py  accounts.py  ad_groups.py  ads.py  campaigns.py  conversions.py  keywords.py  negative_keywords.py  retargeting.py  stats.py
src/sklik_mcp/tools/fenix/: account.py  client.py  product_groups.py  shopping_stats.py
tests/integration/: test_smoke.py
tests/unit/: test_client.py  test_config.py  test_errors.py  test_formatting.py  test_server.py  test_session.py
tests/unit/fenix/: test_client.py  test_product_groups.py  test_shopping_stats.py
tests/unit/tools/: test_accounts.py  test_ad_groups.py  test_ads.py  test_campaigns.py  test_conversions.py  test_keywords.py  test_negative_keywords.py  test_retargeting.py  test_stats.py
