[project]
name = "sklik-mcp"
version = "0.1.0"
description = "MCP server for Seznam Sklik advertising — manage campaigns, ads, keywords, and stats from Claude."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "rawbark.cz" }]
keywords = ["mcp", "sklik", "seznam", "advertising", "ppc", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp>=1.27.0",
    "requests>=2.31",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.scripts]
sklik-mcp = "sklik_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/rawbark/seznam-ads-mcp"
Issues = "https://github.com/rawbark/seznam-ads-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sklik_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/sklik_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring SKLIK_API_TOKEN_TEST env var",
]
